# geometry

./: .gitignore  windeploy.sh
src/: .gitignore  ArgumentInfo.cpp  ArgumentInfo.h  ArgumentInfoModel.cpp  ArgumentInfoModel.h  CMakeLists.txt  Calculator.cpp  Calculator.h  Circle.cpp  Circle.h  DependantCalculator.cpp  DependantCalculator.h  DependantGenerator.cpp  DependantGenerator.h  EFunctionList.cpp  EGeometry.cpp  EGeometry.h  ETransformation.cpp  ETransformation.h  EditMode.cpp  EditMode.h  Engine.cpp  Engine.h  FreeCalculator.cpp  FreeCalculator.h  FreeGenerator.cpp  FreeGenerator.h  Function.cpp  Function.h  FunctionInfoWidget.cpp  FunctionInfoWidget.h  Generator.cpp  Generator.h  Geometry.cpp  Geometry.h  GeometryGenerator.cpp  GeometryGenerator.h  GeometryItem.cpp  GeometryItem.h  GeometryObject.cpp  (+60 more)
src/core/: AbstractGeometry.cpp  AbstractGeometry.h  AbstractPoint.cpp  AbstractPoint.h  AbstractTransformation.h  ArgumentInfoModel.cpp  ArgumentInfoModel.h  CMakeLists.txt  Calculator.cpp  Calculator.h  DependantCalculator.cpp  DependantCalculator.h  EditMode.cpp  EditMode.h  Engine.cpp  Engine.h  FreeCalculator.cpp  FreeCalculator.h  Function.cpp  Function.h  Generator.cpp  Generator.h  Geometry.cpp  Geometry.h  GeometryGenerator.cpp  GeometryGenerator.h  GeometryItem.cpp  GeometryItem.h  GeometryObject.h  MainWindow.cpp  MainWindow.h  Object.cpp  Object.h  Real.cpp  Real.h  RealGenerator.cpp  RealGenerator.h  RestrictedCalculator.cpp  RestrictedCalculator.h  Scene.cpp  (+12 more)
src/euclidian/: Arc.cpp  Arc.h  CMakeLists.txt  Circle.cpp  Circle.h  EFunctionList.cpp  EGeometry.cpp  EGeometry.h  ETransformation.cpp  ETransformation.h  Geometry.cpp  Geometry.h  Line.cpp  Line.h  Point.cpp  Point.h  Segment.cpp  Segment.h  Transformation.cpp  Transformation.h  functionList.cpp
src/hyperbolic/: CMakeLists.txt  Circle.cpp  Circle.h  Geometry.cpp  Geometry.h  Line.cpp  Line.h  Point.cpp  Point.h  Transformation.cpp  Transformation.h  functionList.cpp  run
src/util/: CMakeLists.txt  cramer.h  getOrThrow.cpp  math.cpp  math.h
